# EchoScopeBackend

./: Cargo.toml  Dockerfile  fly.toml
src/: competitionAttributes.rs  liveActivityApns.rs  main.rs
