[package]
name = "EchoScopeBackend"
version = "0.1.0"
edition = "2021"

[dependencies]
robotevents = "0.6.0"
warp = "0.3.7"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.218", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
jsonwebtoken = "8.3"
serde_json = "1.0"
hyper-rustls = { version = "0.24", features = ["http2"] }
serde_with = "3.12.0"
regex = "1.11.1"
